--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
       const [selectedDate, setSelectedDate] = useState(null);
       const [invoices, setInvoices] = useState([]);
       const [loading, setLoading] = useState(false);
+      const [loadingInvoices, setLoadingInvoices] = useState(true);
       const [monthlyTotal, setMonthlyTotal] = useState(0);
       const [selectedInvoice, setSelectedInvoice] = useState(null);
 
@@ -73,7 +74,7 @@
           const result = await response.json();
           if (result.data) {
             setGmailAuth(true);
-            loadMonthlyInvoices();
+            await loadMonthlyInvoices();
           }
         } catch (error) {
           console.error('Error authenticating Gmail:', error);
@@ -98,6 +99,7 @@
       };
 
       const loadMonthlyInvoices = async () => {
+        setLoadingInvoices(true);
         const startOfMonth = new Date(currentDate.getFullYear(), currentDate.getMonth(), 1);
         const endOfMonth = new Date(currentDate.getFullYear(), currentDate.getMonth() + 1, 0);
         
@@ -115,6 +117,8 @@
           }
         } catch (error) {
           console.error('Error loading invoices:', error);
+        } finally {
+          setLoadingInvoices(false);
         }
       };
 
@@ -310,7 +314,7 @@
                           `}
                         >
                           <div className="text-sm font-medium">{date.getDate()}</div>
-                          {dayInvoices.length > 0 && isCurrentMonth && (
+                          {!loadingInvoices && dayInvoices.length > 0 && isCurrentMonth && (
                             <div className="mt-2">
                               {submittedCount > 0 && (
                                 <div className="text-xs bg-green-100 border border-green-300 text-green-800 pl-1 py-0.5 rounded mb-1">
@@ -324,6 +328,14 @@
                               )}
                             </div>
                           )}
+                          {
+                            loadingInvoices && (
+                              <img 
+                                src="https://media.tenor.com/WX_LDjYUrMsAAAAm/loading.webp"
+                                alt="Loading"
+                                className="w-6 h-6 mx-auto mt-4" />
+                            )
+                          }
                         </div>
                       );
                     })}
